# MovieAPI

./: .gitignore  main.py  pyproject.toml
app/api/: logic.py  mutation.py  query.py  schema.py
app/db/: database.py  models.py  move_repository.py  repository.py
configs/: config.py
