[project]
name = "movies-api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "strawberry-graphql (>=0.261.1,<0.262.0)",
    "fastapi (>=0.115.9,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
